<resources>
    <string name="app_name">EveryFood_BTL</string>
    <string name="phienban">Phiên bản</string>
    <string name="dangtai">Đang tải</string>
    <string name="tencongty">BPASS Team</string>
    <string name="email"> Email </string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="facebook_app_id">1957500261202250</string>
    <string name="dangnhapgoogle">Đăng nhập bằng Google</string>
    <string name="dangnhapfacebook">Đăng nhập bằng Facebook</string>
    <string name="quenmatkhau">Quên mật khẩu ?</string>
    <string name="dangkymoi"> <u> Đăng ký mới </u></string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>

    <string name="thongbaonhapemail">Bạn chưa nhập email</string>
    <string name="thongbaonhappassword">Bạn chưa nhập mật khẩu</string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giông mật khẩu ở trên</string>
    <string name="thongbaomatkhau6kytu">Mật khẩu có độ dài 6 ký tự trở lên</string>
    <string name="dangkythanhcong">Tạo tài khoản thành công</string>
    <string name="dangxuly">Đang xử lý</string>
    <string name="thongbaodangnhapthatbai">Tài khoản không hợp lệ</string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu</string>
    <string name="chuoikhoiphucmatkhau">Bạn vui lòng nhập địa chỉ Email để khôi phục mật khẩu</string>
    <string name="guiemailkhoiphuctaikhoan">Gửi Email</string>
    <string name="khongphailathanhvien">Bạn không phải thành viên? </string>
    <string name="thongbaoemailkhonghople">Email không hợp lệ, vui lòng nhập đúng định dạng Email</string>
    <string name="thongbaoguiemailthanhcong">Gửi Email thành công !</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">HCM</string>

    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game and Fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blogs">Blogs</string>
    <string name="topmembers">Top thành viên</string>
    <string name="datmon">Đặt món</string>
    <string name="taianh">Tải ảnh</string>
    <string name="luulai">Lưu lại</string>
    <string name="comment">Comment</string>
    <string name="binhluan">Bình luận</string>
    <string name="checkin">Check-in</string>
    <string name="chiase">Chia sẻ</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="capnhatwifi">Cập nhật Wifi</string>
    <string name="nhaptenwifi">Nhập tên Wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu Wifi</string>
    <string name="dongy">Đồng ý</string>
    <string name="bancannhapduthongtin">Bạn cần nhập đủ thông tin</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="dang">Đăng</string>
    <string name="vietbinhluan">Viết bình luận</string>
    <string name="xong">Xong</string>
    <string name="thucdon">Thực đơn</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>

</resources>
