<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <EditText
        android:id="@+id/edTenWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhaptenwifi" />

    <EditText
        android:id="@+id/edMatKhauWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhapmatkhauwifi"
        />

    <Button
        android:id="@+id/btnDongYCapNhatWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dongy"
        android:background="@drawable/button_radius_5dp"
        android:textColor="@color/colorAccent"
        />

</LinearLayout>