<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundDangNhap"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:paddingTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/foodytext"
                android:id="@+id/imageView2"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorwhite"
                android:textAlignment="center"
                android:text="@string/khoiphucmatkhau"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:text="@string/chuoikhoiphucmatkhau"
                android:layout_margin="10dp"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/edEmailKP"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorwhite"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorwhite"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guiemailkhoiphuctaikhoan"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:drawableTint="@color/colorPrimaryDark"
                android:background="@drawable/radius_button"
                android:drawablePadding="10dp"
                android:textColor="@color/colorwhite"

                android:id="@+id/btnGuiEmailKP" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorwhite"
                    android:text="@string/khongphailathanhvien"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorwhite"
                    android:layout_marginLeft="5dp"
                    android:text="@string/dangkymoi"
                    android:id="@+id/txtDangKyKP"
                    />


            </LinearLayout>




        </LinearLayout>
    </FrameLayout>


</RelativeLayout>