<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/edTenQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenquanan" />

            <EditText
                android:id="@+id/edGiaToiThieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/giatoithieu"
                android:text="0"
                android:inputType="number"
                />

            <EditText
                android:id="@+id/edGiaToiDa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/giatoida"
                android:text="0"
                android:inputType="number"
                />



            <RadioGroup
                android:id="@+id/rdGroupTrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giaohang"
                    />

                <RadioButton
                    android:id="@+id/rdKhongGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khonggiaohang"
                    android:checked="true"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGioMoCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giomocua"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnGioDongCua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giodongcua"
                    android:textAllCaps="false"

                    />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorwhite"
                >

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/video_grey_dam" />

                <ImageView
                    android:id="@+id/imgVideo"
                    android:background="@color/colorwhite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/video_grey_dam"
                    />

            </FrameLayout>


            <HorizontalScrollView
                android:id="@+id/scrollViewKhungTienIch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <LinearLayout
                    android:id="@+id/linearKhungTienIchHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>


            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/linearKhungThemChiNhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>


            <Spinner
                android:id="@+id/spinnerKhuVuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


            </Spinner>

            <ImageView
                android:id="@+id/imgHinhQuan1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/camera_100px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgHinhQuan2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/camera_100px" />

                <ImageView
                    android:id="@+id/imgHinhQuan3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/camera_100px" />


                <ImageView
                    android:id="@+id/imgHinhQuan4"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/camera_100px" />


                <ImageView
                    android:id="@+id/imgHinhQuan5"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/camera_100px" />


                <ImageView
                    android:id="@+id/imgHinhQuan6"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:src="@drawable/camera_100px" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearKhungThucDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>


            <Button
                android:id="@+id/btnThemQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/luuquanan"
                android:textColor="@color/colorwhite" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>